Add new Component
Add new Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,20 @@
   </li>
 </ul> -->
 
-<app-alert></app-alert>
-<app-success-alert></app-success-alert>
+<!-- <app-alert></app-alert>
+<app-success-alert></app-success-alert> -->
+
+<!-- <appSimple></appSimple>  -->
+<!-- <show-app></show-app> -->
+
+<!-- <app-str-intrpolution></app-str-intrpolution>   
+
+ <app-prop-binding></app-prop-binding>  
+
+ <app-event-binding></app-event-binding> 
+
+<app-two-way-binding></app-two-way-binding> -->
+
+<app-data-binding-assign></app-data-binding-assign>
+
 <router-outlet></router-outlet> 
-<show-app></show-app>
-<appSimple></appSimple> 
