--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,14 +25,22 @@
 <!-- <appSimple></appSimple>  -->
 <!-- <show-app></show-app> -->
 
-<!-- <app-str-intrpolution></app-str-intrpolution>   
+<!-- <app-str-intrpolution></app-str-intrpolution>    -->
 
- <app-prop-binding></app-prop-binding>  
+ <!-- <app-prop-binding></app-prop-binding>   -->
 
- <app-event-binding></app-event-binding> 
+ <!-- <app-event-binding></app-event-binding>  -->
 
-<app-two-way-binding></app-two-way-binding> -->
+<!-- <app-two-way-binding></app-two-way-binding> -->
 
-<app-data-binding-assign></app-data-binding-assign>
+<!-- <app-data-binding-assign></app-data-binding-assign> -->
+
+<!-- <app-diredirectives></app-diredirectives> -->
+
+<!-- <app-ng-if-directive></app-ng-if-directive> -->
+
+<app-ng-for-directive></app-ng-for-directive>
+
+<app-ng-switch-directive></app-ng-switch-directive>
 
 <router-outlet></router-outlet> 
