--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,8 +39,10 @@
 
 <!-- <app-ng-if-directive></app-ng-if-directive> -->
 
-<app-ng-for-directive></app-ng-for-directive>
+<!-- <app-ng-for-directive></app-ng-for-directive> -->
 
-<app-ng-switch-directive></app-ng-switch-directive>
+<!-- <app-ng-switch-directive></app-ng-switch-directive> -->
 
-<router-outlet></router-outlet> 
+<app-structural-directive></app-structural-directive>
+
+<router-outlet></router-outlet>
