--- a/src/app/ng-for-directive/ng-for-directive.component.html
+++ b/src/app/ng-for-directive/ng-for-directive.component.html
@@ -65,7 +65,7 @@
             {{courseTitle}}
         </div>
         <div>
-            <table class="table">
+            <table class="table table-bordered">
                 <thead>
                     <tr>
                         <th>Course Name</th>
