--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 
 <!-- <app-str-intrpolution></app-str-intrpolution>    -->
 
- <!-- <app-prop-binding></app-prop-binding>   -->
+ <app-prop-binding></app-prop-binding>  
 
  <!-- <app-event-binding></app-event-binding>  -->
 
@@ -43,6 +43,10 @@
 
 <!-- <app-ng-switch-directive></app-ng-switch-directive> -->
 
-<app-structural-directive></app-structural-directive>
+<!-- <app-structural-directive></app-structural-directive> -->
+
+<!-- <app-attribute-directive></app-attribute-directive> -->
+
+
 
 <router-outlet></router-outlet>
