--- a/src/app/prop-binding/prop-binding.component.html
+++ b/src/app/prop-binding/prop-binding.component.html
@@ -15,3 +15,26 @@
 
  <img [src]='imgUrl' alt="TeacherImg">    
 
+
+
+ <!--  Attribute Binding  -->
+
+
+
+ <!--  Class Binding  -->
+
+ <div [class]='isApply'></div>
+
+ <div class='box'></div>
+
+ <!--  Style Binding  -->
+
+ <h1 [style.color]="styApply"> Hallow Word</h1>
+
+ <h1 [style.color]="isTrue ?'red' : 'yellow'"> Hallow Word</h1>
+ 
+
+
+ <h1 [style.backgroundColor]="isTrue ?'red' : 'yellow'"> Hallow Word</h1>
+
+ <!-- background-color -->
