--- a/src/app/str-intrpolution/str-intrpolution.component.html
+++ b/src/app/str-intrpolution/str-intrpolution.component.html
@@ -14,3 +14,10 @@
 <br>
 
 <p>My Friend Name is - {{friendName}} and my best Friend name is - {{bestFriend}} also very close friend name is -{{closeFriend}}</p>
+
+
+<h2> Addition of 2 & 2 = {{2+2}} </h2>
+
+<h5><img src="{{ url }}"></h5>
+
+<h4>{{ myName() }}</h4>
