--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,13 +27,15 @@
 
 <!-- <app-str-intrpolution></app-str-intrpolution>    -->
 
- <app-prop-binding></app-prop-binding>  
+ <!-- <app-prop-binding></app-prop-binding>   -->
 
  <!-- <app-event-binding></app-event-binding>  -->
 
 <!-- <app-two-way-binding></app-two-way-binding> -->
 
 <!-- <app-data-binding-assign></app-data-binding-assign> -->
+
+<app-binding-practice></app-binding-practice>
 
 <!-- <app-diredirectives></app-diredirectives> -->
 
