--- a/src/app/event-binding/event-binding.component.html
+++ b/src/app/event-binding/event-binding.component.html
@@ -16,3 +16,14 @@
 <br>
 
 <div>{{friendName}}</div>
+
+
+<!-- click event -->
+
+<select name="" (click)="handEvent($event)">
+    <option value="Sajid">Sajid</option>
+    <option value="Sachin">Sachin</option>
+    <option value="Ajay">Ajay</option>
+    <option value="Pankaj">Sandip</option>
+</select>
+
