--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,11 @@
 </ul> -->
 
 <!-- <app-alert></app-alert>
+
 <app-success-alert></app-success-alert> -->
 
 <!-- <appSimple></appSimple>  -->
+
 <!-- <show-app></show-app> -->
 
 <!-- <app-str-intrpolution></app-str-intrpolution>    -->
@@ -35,7 +37,7 @@
 
 <!-- <app-data-binding-assign></app-data-binding-assign> -->
 
-<app-binding-practice></app-binding-practice>
+<!-- <app-binding-practice></app-binding-practice> -->
 
 <!-- <app-diredirectives></app-diredirectives> -->
 
@@ -49,6 +51,12 @@
 
 <!-- <app-attribute-directive></app-attribute-directive> -->
 
+<!-- <app-decorator-child></app-decorator-child> -->
 
+<!-- <app-decorator-parent></app-decorator-parent> -->
+
+<!-- <app-output-decorator-child></app-output-decorator-child> -->
+
+<app-output-decorator-parent></app-output-decorator-parent>
 
 <router-outlet></router-outlet>
