--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,6 +57,14 @@
 
 <!-- <app-output-decorator-child></app-output-decorator-child> -->
 
-<app-output-decorator-parent></app-output-decorator-parent>
+<!-- <app-output-decorator-parent></app-output-decorator-parent> -->
+
+<!-- <app-on-changes-hook></app-on-changes-hook> -->
+
+<!-- <app-on-change-hook-parent></app-on-change-hook-parent> -->
+
+<app-on-change-child></app-on-change-child>
+
+<app-on-change-parent></app-on-change-parent>
 
 <router-outlet></router-outlet>
