--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,8 +63,12 @@
 
 <!-- <app-on-change-hook-parent></app-on-change-hook-parent> -->
 
-<app-on-change-child></app-on-change-child>
+<!-- <app-on-change-child></app-on-change-child> -->
 
-<app-on-change-parent></app-on-change-parent>
+<!-- <app-on-change-parent></app-on-change-parent> -->
+
+<!-- <app-add-remove-assign></app-add-remove-assign> -->
+
+<app-directive-practice></app-directive-practice>
 
 <router-outlet></router-outlet>
