--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 
 <app-success-alert></app-success-alert> -->
 
-<!-- <appSimple></appSimple>  -->
+<!-- <appSimple></appSimple>  --> 
 
 <!-- <show-app></show-app> -->
 
@@ -39,7 +39,9 @@
 
 <!-- <app-binding-practice></app-binding-practice> -->
 
-<!-- <app-diredirectives></app-diredirectives> -->
+<!-- <app-binding></app-binding> -->
+
+<!-- <app-diredirectives></app-diredirectives>   -->
 
 <!-- <app-ng-if-directive></app-ng-if-directive> -->
 
@@ -48,6 +50,10 @@
 <!-- <app-ng-switch-directive></app-ng-switch-directive> -->
 
 <!-- <app-structural-directive></app-structural-directive> -->
+
+<!-- <app-ng-style-directive></app-ng-style-directive> -->
+
+<!-- <app-ng-class-directive></app-ng-class-directive> -->
 
 <!-- <app-attribute-directive></app-attribute-directive> -->
 
@@ -59,6 +65,10 @@
 
 <!-- <app-output-decorator-parent></app-output-decorator-parent> -->
 
+<!-- <app-output-practice-child></app-output-practice-child> -->
+
+<app-output-practice-parent></app-output-practice-parent>
+
 <!-- <app-on-changes-hook></app-on-changes-hook> -->
 
 <!-- <app-on-change-hook-parent></app-on-change-hook-parent> -->
@@ -69,6 +79,10 @@
 
 <!-- <app-add-remove-assign></app-add-remove-assign> -->
 
-<app-directive-practice></app-directive-practice>
+<!-- <app-directive-practice></app-directive-practice> -->
+
+<!-- <app-decorator-child-practice></app-decorator-child-practice> -->
+
+<!-- <app-decorator-parent-practice></app-decorator-parent-practice> -->
 
 <router-outlet></router-outlet>
