--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
 
 <!-- <app-output-practice-child></app-output-practice-child> -->
 
-<app-output-practice-parent></app-output-practice-parent>
+<!-- <app-output-practice-parent></app-output-practice-parent> -->
 
 <!-- <app-on-changes-hook></app-on-changes-hook> -->
 
@@ -84,5 +84,9 @@
 <!-- <app-decorator-child-practice></app-decorator-child-practice> -->
 
 <!-- <app-decorator-parent-practice></app-decorator-parent-practice> -->
+
+<!-- <app-life-cycle-hook-child></app-life-cycle-hook-child> -->
+
+<app-life-cycle-hook-parent></app-life-cycle-hook-parent>
 
 <router-outlet></router-outlet>
