--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,6 +87,12 @@
 
 <!-- <app-life-cycle-hook-child></app-life-cycle-hook-child> -->
 
-<app-life-cycle-hook-parent></app-life-cycle-hook-parent>
+<!-- <app-life-cycle-hook-parent></app-life-cycle-hook-parent> -->
+
+                          <!-- FORMS START -->
+
+<!-- <app-forms-practice></app-forms-practice> -->
+
+<app-template-form></app-template-form>
 
 <router-outlet></router-outlet>
