--- a/src/app/forms-practice/forms-practice.component.html
+++ b/src/app/forms-practice/forms-practice.component.html
@@ -3,24 +3,25 @@
     <div class="row justify-content-center">
         <div class="col-md-6 text-left rounded shadow py-5">
             <form #regForm="ngForm" (ngSubmit)="register(regForm)">
-                <h2 class="text-center"> Register Form </h2>
+                <h2> Register Form </h2>
                 <br>
                 <div class="form-group col-md-5">
                     <label>First Name</label>
-                    <input class="form-control" type="text" placeholder="Enter your First Name" name="first Name"
-                       required ngModel>
+                    <input class="form-control" type="text" placeholder=" First Name" name="first Name"
+                       required ngModel #fname="ngModel"><span *ngIf="fname.touched && !fname.valid">Please Enter your Name</span>
                 </div>
 
                 <div class="form-group col-md-5">
                     <label>Last Name</label>
-                    <input class="form-control" type="text" placeholder="Enter Last First Name" name="last Name"
-                    required  ngModel>
+                    <input class="form-control" type="text" placeholder=" First Name" name="last Name"
+                    required  ngModel #lname="ngModel"><span *ngIf="lname.touched && !lname.valid">Please Enter your last name</span>
                 </div>
 
                 <div class="form-group col-md-5">
                     <label>Email ID</label>
-                    <input class="form-control" type="text" email placeholder="Enter your Email Address" name="email Address"
-                    required  ngModel>
+                    <input class="form-control" type="text" email placeholder="Email ID" name="email Address"
+                    required  ngModel #email="ngModel"> 
+                    <span *ngIf="email.touched && !email.valid">Please enter Valid email ID </span> 
                 </div>
                 <br>
                 <div class="align-center">
