--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,8 +93,8 @@
 
 <!-- <app-forms-practice></app-forms-practice> -->
 
-<app-template-form></app-template-form>
+<!-- <app-template-form></app-template-form> -->
 
-<!-- <app-practice></app-practice> -->
+<app-practice></app-practice>
 
 <router-outlet></router-outlet>
