--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,13 @@
   </li>
 </ul> -->
 
+
+
 <!-- <app-alert></app-alert>
 
 <app-success-alert></app-success-alert> -->
+
+                             <!-- Data Binding -->
 
 <!-- <appSimple></appSimple>  --> 
 
@@ -41,6 +45,8 @@
 
 <!-- <app-binding></app-binding> -->
 
+          <!-- Directives - Structural , Attribute , Component , Custom -->
+
 <!-- <app-diredirectives></app-diredirectives>   -->
 
 <!-- <app-ng-if-directive></app-ng-if-directive> -->
@@ -57,6 +63,8 @@
 
 <!-- <app-attribute-directive></app-attribute-directive> -->
 
+              <!-- Decorators ( @Input() & @Output())  -->
+
 <!-- <app-decorator-child></app-decorator-child> -->
 
 <!-- <app-decorator-parent></app-decorator-parent> -->
@@ -69,6 +77,18 @@
 
 <!-- <app-output-practice-parent></app-output-practice-parent> -->
 
+<!-- <app-add-remove-assign></app-add-remove-assign> -->
+
+               <!-- Decorators ( @Input() & @Output())  -->
+
+<!-- <app-directive-practice></app-directive-practice> -->
+
+<!-- <app-decorator-child-practice></app-decorator-child-practice> -->
+
+<!-- <app-decorator-parent-practice></app-decorator-parent-practice> -->
+
+                  <!--  Life Cycle Hook -->
+
 <!-- <app-on-changes-hook></app-on-changes-hook> -->
 
 <!-- <app-on-change-hook-parent></app-on-change-hook-parent> -->
@@ -76,14 +96,6 @@
 <!-- <app-on-change-child></app-on-change-child> -->
 
 <!-- <app-on-change-parent></app-on-change-parent> -->
-
-<!-- <app-add-remove-assign></app-add-remove-assign> -->
-
-<!-- <app-directive-practice></app-directive-practice> -->
-
-<!-- <app-decorator-child-practice></app-decorator-child-practice> -->
-
-<!-- <app-decorator-parent-practice></app-decorator-parent-practice> -->
 
 <!-- <app-life-cycle-hook-child></app-life-cycle-hook-child> -->
 
@@ -95,6 +107,14 @@
 
 <!-- <app-template-form></app-template-form> -->
 
-<app-practice></app-practice>
+<!-- <app-practice></app-practice> -->
+
+<!-- <app-template-driven-form></app-template-driven-form> -->
+
+<!-- <app-template-driven-form-practice></app-template-driven-form-practice> -->
+
+<app-template-driven-assign></app-template-driven-assign>
+
+<!-- <app-reactive-forms></app-reactive-forms> -->
 
 <router-outlet></router-outlet>
