--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -6,11 +6,11 @@
                 <ul>
                     <h2>Register Form</h2>
                     <div>
-                        <li><input type="text" placeholder="Enter Your Full Name*" id="name" required ngModel #name="ngModel">
-                            <span *ngIf="name.touched && name.valid">Please enter your full name</span></li>
+                        <input type="text" placeholder="Enter Your Full Name*" id="name" >
+                            
                     </div>
                     <div>
-                        <li><input type="email" placeholder="Email ID - Ex.abc@gmail.com*" id="name" email required>
+                        <li><input type="email" placeholder="Email ID - Ex.abc@gmail.com*" id="name" >
                         </li>
                     </div>
                     <li><input placeholder="Enter Your Mobile Number*" id="name" minlength="10" maxlength="15"></li>
