--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -8,7 +8,7 @@
                     <div class="form-group col-md-5">
                         <label>Email ID</label>
                         <input class="form-control" type="text" email placeholder="Enter your Email Address"
-                            name="email Address" required ngModel #email="ngModel"><span
+                            name="email Address" required  #email="ngModel" ngModel><span
                             *ngIf="email.touched && !email.valid">Please enter valid email ID</span>
                     </div>
                     <div class="form-group col-md-5">
@@ -20,7 +20,7 @@
                 <div class="form-group col-md-5">
                     <label for="address">Address</label>
                     <input type="text" class="form-control" id="address" name="Address" placeholder="1234 Main Road"
-                        required ngModel>
+                        required [(ngModel)]="Address"><span *ngIf="Address">Your Address is - {{Address}}</span>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-5">
@@ -30,7 +30,7 @@
                     </div>
                     <div class="form-group col-md-5">
                         <label for="state">State</label>
-                        <select id="state" name="State" class="form-control" required ngModel>
+                        <select id="state" name="State" class="form-control" required  [ngModel]="defaultValue">
                             <option disabled selected>--Select--</option>
                             <option>Maharashtra</option>
                             <option>Karanataka</option>
