--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -113,8 +113,8 @@
 
 <!-- <app-template-driven-form-practice></app-template-driven-form-practice> -->
 
-<app-template-driven-assign></app-template-driven-assign>
+<!-- <app-template-driven-assign></app-template-driven-assign> -->
 
-<!-- <app-reactive-forms></app-reactive-forms> -->
+<app-reactive-forms></app-reactive-forms>
 
 <router-outlet></router-outlet>
