--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 
                              <!-- Data Binding -->
 
-<!-- <appSimple></appSimple>  --> 
+<!-- <appSimple></appSimple>   -->
 
 <!-- <show-app></show-app> -->
 
@@ -53,7 +53,7 @@
 
 <!-- <app-ng-for-directive></app-ng-for-directive> -->
 
-<!-- <app-ng-switch-directive></app-ng-switch-directive> -->
+<!-- <app-ng-switch-directive></app-ng-switch-directive>  -->
 
 <!-- <app-structural-directive></app-structural-directive> -->
 
@@ -102,6 +102,7 @@
 <!-- <app-life-cycle-hook-parent></app-life-cycle-hook-parent> -->
 
                           <!-- FORMS START -->
+                          <!-- Template-Driven-Form -->
 
 <!-- <app-forms-practice></app-forms-practice> -->
 
@@ -115,6 +116,14 @@
 
 <!-- <app-template-driven-assign></app-template-driven-assign> -->
 
-<app-reactive-forms></app-reactive-forms>
+                <!-- Using All validations  (app-template-form-my)  -->
+
+<!-- <app-template-form-my></app-template-form-my> -->
+
+                        <!-- Reactive Form -->
+
+<!-- <app-reactive-forms></app-reactive-forms> -->
+
+<app-reactive-form-my></app-reactive-form-my>
 
 <router-outlet></router-outlet>
