--- a/src/app/event-binding/event-binding.component.html
+++ b/src/app/event-binding/event-binding.component.html
@@ -20,10 +20,11 @@
 
 <!-- click event -->
 
-<select name="" (click)="handEvent($event)">
+<select name="" (change)="handEvent($event)">
     <option value="Sajid">Sajid</option>
     <option value="Sachin">Sachin</option>
     <option value="Ajay">Ajay</option>
     <option value="Pankaj">Sandip</option>
 </select>
 
+<p>{{show}}</p>
