--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,6 +124,16 @@
 
 <!-- <app-reactive-forms></app-reactive-forms> -->
 
-<app-reactive-form-my></app-reactive-form-my>
+<!-- <app-reactive-form-my></app-reactive-form-my> -->
+
+                        <!-- Services -->
+
+<!-- <app-service-component-one></app-service-component-one> -->
+
+<!-- <app-service-component-two></app-service-component-two> -->
+
+                    <!-- http-and-observables  -->
+
+<app-http-and-observables-first></app-http-and-observables-first>
 
 <router-outlet></router-outlet>
