--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,14 +126,34 @@
 
 <!-- <app-reactive-form-my></app-reactive-form-my> -->
 
+<!-- <app-reactive-form></app-reactive-form> -->
+
                         <!-- Services -->
 
 <!-- <app-service-component-one></app-service-component-one> -->
 
 <!-- <app-service-component-two></app-service-component-two> -->
 
-                    <!-- http-and-observables  -->
+                     <!-- http-and-observables  Call of API -->
 
-<app-http-and-observables-first></app-http-and-observables-first>
+<!-- <app-http-and-observables-first></app-http-and-observables-first> -->
+
+<!-- <app-http-and-observables-second></app-http-and-observables-second> -->
+
+
+                   <!-- Subject-And-Behavior-Subject -->
+
+<!-- <app-subject-and-behavior-subject-first></app-subject-and-behavior-subject-first>
+
+<app-subject-and-behavior-subject-second></app-subject-and-behavior-subject-second>
+
+<app-subject-and-behavior-subject-third></app-subject-and-behavior-subject-third>
+
+<app-subject-and-behavior-subject-fourth></app-subject-and-behavior-subject-fourth> -->
+
+
+<app-subject-and-bsub-employee-first></app-subject-and-bsub-employee-first>
+
+<app-subject-and-bsub-employee-second></app-subject-and-bsub-employee-second>
 
 <router-outlet></router-outlet>
