--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -156,4 +156,18 @@
 
 <app-subject-and-bsub-employee-second></app-subject-and-bsub-employee-second>
 
+<app-subject-and-bsub-employee-third></app-subject-and-bsub-employee-third>
+
+
+                         <!-- Singleton vs Multiple -->
+
+<!-- <app-service-singleton-first></app-service-singleton-first>
+
+<app-service-singleton-second></app-service-singleton-second> -->
+
+
+                             <!-- Pipe -->
+
+<!-- <app-pipe-demo></app-pipe-demo> -->
+
 <router-outlet></router-outlet>
