--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -152,11 +152,11 @@
 <app-subject-and-behavior-subject-fourth></app-subject-and-behavior-subject-fourth> -->
 
 
-<app-subject-and-bsub-employee-first></app-subject-and-bsub-employee-first>
+<!-- <app-subject-and-bsub-employee-first></app-subject-and-bsub-employee-first>
 
 <app-subject-and-bsub-employee-second></app-subject-and-bsub-employee-second>
 
-<app-subject-and-bsub-employee-third></app-subject-and-bsub-employee-third>
+<app-subject-and-bsub-employee-third></app-subject-and-bsub-employee-third> -->
 
 
                          <!-- Singleton vs Multiple -->
@@ -169,5 +169,7 @@
                              <!-- Pipe -->
 
 <!-- <app-pipe-demo></app-pipe-demo> -->
+
+<app-custom-filter-pipe></app-custom-filter-pipe>
 
 <router-outlet></router-outlet>
