--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -170,6 +170,8 @@
 
 <!-- <app-pipe-demo></app-pipe-demo> -->
 
-<app-custom-filter-pipe></app-custom-filter-pipe>
+<!-- <app-custom-filter-pipe></app-custom-filter-pipe> -->
+
+<app-custom-pipe-assign></app-custom-pipe-assign>
 
 <router-outlet></router-outlet>
