--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,9 +65,9 @@
 
               <!-- Decorators ( @Input() & @Output())  -->
 
-<!-- <app-decorator-child></app-decorator-child> -->
+<!-- <app-decorator-child></app-decorator-child>
 
-<!-- <app-decorator-parent></app-decorator-parent> -->
+<app-decorator-parent></app-decorator-parent> -->
 
 <!-- <app-output-decorator-child></app-output-decorator-child> -->
 
@@ -93,13 +93,13 @@
 
 <!-- <app-on-change-hook-parent></app-on-change-hook-parent> -->
 
-<!-- <app-on-change-child></app-on-change-child> -->
+<!-- <app-on-change-child></app-on-change-child>
 
-<!-- <app-on-change-parent></app-on-change-parent> -->
+<app-on-change-parent></app-on-change-parent> -->
 
-<!-- <app-life-cycle-hook-child></app-life-cycle-hook-child> -->
+<!-- <app-life-cycle-hook-child></app-life-cycle-hook-child>
 
-<!-- <app-life-cycle-hook-parent></app-life-cycle-hook-parent> -->
+<app-life-cycle-hook-parent></app-life-cycle-hook-parent> -->
 
                           <!-- FORMS START -->
                           <!-- Template-Driven-Form -->
@@ -172,6 +172,10 @@
 
 <!-- <app-custom-filter-pipe></app-custom-filter-pipe> -->
 
-<app-custom-pipe-assign></app-custom-pipe-assign>
+<!-- <app-custom-pipe-assign></app-custom-pipe-assign> -->
 
-<router-outlet></router-outlet>
+
+
+ <!-- Router Outlet (Removing there router outlet tag & Inserting router outlet component ) -->
+
+<app-router-outlet></app-router-outlet>
